# MAT

./: CMakeLists.txt  LICENSE  OSX.rootlogon.C  OSXMakefile  PackageConfig.cmake.in  README  README.md  READMEForCMake.txt  setup.sh.in
CVS/: Entries  Repository
NSF_ValidationSuite/: compareToReferenceHists.py  makeNSFValidationHists.py  validationConfigCard.py
NSF_ValidationSuite/CVS/: Entries  Repository
NSF_ValidationSuite/originalValidationAgainstCCQENu/: README.txt  compareToReferenceHists_originalValidationAgainstCCQENu.py
NSF_ValidationSuite/originalValidationAgainstCCQENu/CVS/: Entries  Repository
NSF_ValidationSuite/py_classes/: errorMaps.py  plottingClasses.py  systematicsFunctions.py  validationFunctions.py
NSF_ValidationSuite/py_classes/CVS/: Entries  Repository
NSF_ValidationSuite/style/: myPlotStyle.h
NSF_ValidationSuite/style/CVS/: Entries  Repository
PlotUtils/: AnaBinning.cxx  AnaBinning.h  AngleSystematics.cxx  AngleSystematics.h  ArachneUtils.cxx  ArachneUtils.h  BaseUniverse.cxx  BaseUniverse.h  CCQE3DFitsSystematics.cxx  CCQE3DFitsSystematics.h  CMakeLists.txt  ChainWrapper.cxx  ChainWrapper.h  CrashOnROOTMessage.h  Cut.h  Cutter.cxx  Cutter.h  DefaultCVUniverse.cxx  DefaultCVUniverse.h  DiffractiveUncSystematics.cxx  DiffractiveUncSystematics.h  ErrorHandler.cxx  ErrorHandler.h  Exceptions.h  FluxReweighter.cxx  FluxReweighter.h  FluxReweighterWithWiggleFit.cxx  FluxReweighterWithWiggleFit.h  FluxSystematics.cxx  FluxSystematics.h  GeantHadronSystematics.cxx  GeantHadronSystematics.h  GenieSystematics.cxx  GenieSystematics.h  GridCanvas.cxx  GridCanvas.h  Hist2DWrapper.cxx  Hist2DWrapper.h  HistFolio.cxx  HistFolio.h  (+140 more)
PlotUtils/CVS/: Entries  Repository
PlotUtils/SystCalcs/: CCQE3DFitFunctions.h  CMakeLists.txt  LowRecoilFunctions.h  MichelFunctions.h  MuonFunctions.h  ProtonKECutFunctions.h  RecoilEnergyFunctions.h  TruthFunctions.h  WeightFunctions.h
PlotUtils/SystCalcs/CVS/: Entries  Repository
PlotUtils/cuts/: CCInclusiveCuts.h  CCInclusiveSignal.h  CMakeLists.txt
PlotUtils/cuts/CVS/: Entries  Repository
PlotUtils/reweighters/: AMUDISReweighter.h  CMakeLists.txt  FSIReweighter.h  FluxAndCVReweighter.h  GENIEReweighter.h  GeantNeutronCVReweighter.h  LowQ2PiReweighter.h  LowRecoil2p2hReweighter.h  MINOSEfficiencyReweighter.h  MKReweighter.h  Model.h  RPAReweighter.h  Reweighter.h  SuSAFromValencia2p2hReweighter.h
PlotUtils/reweighters/CVS/: Entries  Repository
PlotUtils/reweighters/CVS/CVS/: Repository
app/: MakeMHRWKineRenorm.cxx  MergeTool.cxx  MergeToolWithVar.cxx  Variables.txt
app/CVS/: Entries  Repository
cmt/: .cvsignore  requirements
cmt/CVS/: Entries  Repository  Root
dict/: PlotUtilsDict.h  PlotUtilsDict.xml  PlotUtilsDictOSX.xml
dict/CVS/: Entries  Repository
macros/: CMakeLists.txt  FindExcludeChi2Bins.py  Makefile  PlotMCSampleSizeScan.py  PrintLinearStatUnfold_Maya.py  PrintMassTable.cxx  PrintWarpingStudy.py  ProcessMCSampleSizeScan.py  TransWarpExtraction.cxx  TransWarpExtraction.h  compareUnivmean_cv_forflux.C  constraint_test.py  constraint_test_wgts.txt  madd.cxx  make_single_flux_error_band.C  make_single_flux_error_band_ver2.C  test_flux_reweighter_wiggle.C  tryToRead.cxx  tryToWrite.cxx
macros/CVS/: Entries  Repository
python/CVS/: Entries  Repository
python/PlotUtils/: FileList.py  FileManager.py  HistWrapper.py  Histogram.py  LoadPlotUtilsLib.py  LoadPlotUtilsLibOSX.py  MinervaStyle.py  NIMStyle.py  Plot.py  Plotter.py  SelectorPlotter.py  TextHistoPlotter.py  __init__.py
python/PlotUtils/CVS/: Entries  Repository
scripts/: AuditMergedFiles.py  GenerateMakefile.py  PlotFlux.py  PlotFluxLEME.py  SummarizeAudit.py  fluxRearranger.py  flux_calculation.py  flux_prism_add.py  flux_prism_interface.py  functionsForSubmissionScripts.py  submitAuditToGrid.py  submitMergeToGrid.py
scripts/CVS/: Entries  Repository
setup/: .rootlogon.C  .rootrc  CMakeLists.txt  OSX.rootlogon.C  standalone.sh
setup/CVS/: Entries  Repository
test/: Bands2pdf.py  DoesChainWrapperWorkWithXROOTD.cpp  DoesIOErrorHandlingWork.cpp  DoesMagicalIOErrorCrashWork.cpp  DoesMagicalIOErrorCrashWork.py  Mnv2TH1.py  Mnv2pdf.py  MnvH1D_viewer.py  MnvH2D_rename.py  MnvH2D_viewer.py  Mnv_t.py  sum.py
test/CVS/: Entries  Repository
testpy/: MnvH1D_t.py
testpy/CVS/: Entries  Repository
